--- a/winrt/interop/winrt.dll.interop.csproj
+++ b/winrt/interop/winrt.dll.interop.csproj
@@ -1,15 +1,25 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net5.0-windows10.0.18362.0</TargetFramework>
+    <TargetFramework>net5.0-windows10.0.19041.0</TargetFramework>
+    <Platforms>x64</Platforms>
     <NoWarn>CA1416;CS0108</NoWarn>
   </PropertyGroup>
+
+  <ItemGroup>
+    <!--<ProjectReference Include="..\SimpleMathComponent\SimpleMathComponent.vcxproj" />-->
+    <PackageReference Include="Microsoft.Windows.CsWinRT" Version="1.0.1" />
+  </ItemGroup>
+  
   <Import Project="..\..\build\Win2D.cs.props" />
+  
   <PropertyGroup>
     <MergedWinmdDirectory>$(MSBuildThisFileDirectory)..\..\bin\UAPx86\$(Configuration)\MergedWinMD</MergedWinmdDirectory>
     <AssemblyName>Microsoft.Graphics.Canvas.interop</AssemblyName>
     <RootNamespace>Microsoft.Graphics.Canvas</RootNamespace>
+    <!--<CsWinRtIncludes></CsWinRtIncludes>-->
     <CsWinRTExcludes>Windows;Microsoft.Graphics.Canvas.UI.Xaml</CsWinRTExcludes>
   </PropertyGroup>
+  
   <PropertyGroup>
     <CsWinRTVerbosity>high</CsWinRTVerbosity>
     <CsWinRTResponseFile>$(IntermediateOutputPath)cswinrt_platform.rsp</CsWinRTResponseFile>
